--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "start": "node app"
   },
   "dependencies": {
+    "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
+    "google-books-search-2": "^0.3.0",
+    "method-override": "^2.3.5",
+    "mongoose": "^4.4.13",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
